Re-enable the passthrough command decoder on MacOS 10.15

This version was blocked due to driver crashes in glFlush but there are
indicators [0] that this has been fixed by an OS update.

[0] https://bugzilla.mozilla.org/show_bug.cgi?id=1738289

Bug: chromium:1257538
Change-Id: I507a885501e02201e5cf225a2933d8d475152bde
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3637843
Reviewed-by: Zhenyao Mo <zmo@chromium.org>
Commit-Queue: Geoff Lang <geofflang@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1003956}